Fixed spacing in assignment2

--- a/css/seven-segment.css
+++ b/css/seven-segment.css
@@ -1,55 +1,20 @@
-/* body {
-    background: #f1f1f2;
-    box-shadow: inset 0 0 10em 2em #bcbcc1;
-    display: block;
-    margin: 0;
-    height: 100vh;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    color: #404041;
-    pointer-events: none;
-} */
-
-
-/* h1,
 svg {
-    position: absolute;
-    width: 250px;
-    top: 40%;
-    left: 50%;
-} */
-
-
-/* 
-h1 {
-    margin: 100px 0 0 -125px;
-    height: 287.5px;
-    font-family: sans-serif;
-    font-size: 30px;
-    letter-spacing: 6px;
-    line-height: 287.5px;
-    text-align: center;
-    z-index: 100;
-} */
-
-
-/* svg {
-    margin: -143.75px 0 0 -125px;
-} */
+    /* border: tomato solid 3px; */
+    width: 100%;
+    height: 250px;
+}
 
 #display-all {
-    font-family: Oswald;
+    font-family: 'Karla', sans-serif;
     font-size: 35px;
-    font-weight: 500;
+    font-weight: 700;
     font-style: normal;
     font-stretch: normal;
-    line-height: 0.87;
+    line-height: 1.44;
     letter-spacing: normal;
-    color: #1c1d24;
-    margin-top: -200px;
     text-align: center;
+    color: #1c1d24;
+    margin-bottom: 41px;
 }
 
 svg #shape-all path {
@@ -77,16 +42,16 @@ svg #shape-all rect.active {
 }
 
 #display-num {
-    font-family: Oswald;
+    font-family: 'Karla', sans-serif;
     font-size: 35px;
-    font-weight: 500;
+    font-weight: 700;
     font-style: normal;
     font-stretch: normal;
-    line-height: 0.87;
+    line-height: 1.44;
     letter-spacing: normal;
-    color: #1c1d24;
-    margin-top: -200px;
     text-align: center;
+    color: #1c1d24;
+    margin-bottom: 41px;
 }
 
 svg #shape-num path {
